feat(main): Updating CSS and HTML new version

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    </head>
    <body>
       <header>
-         <h1>Layout HTML</h1>
+         <h1>Hola, Soy Nathaly</h1>
       </header>
       <nav>
          <ul>
@@ -35,10 +35,11 @@
       <div class="container">
          <div class="esquerda">
             <h2>Sobre:</h2>
-            <p>XXXXXXX XXXX XXX X XXXXXX XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXX XXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXXXX XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXXX XXXXXXXXXXXXXXXX XXXXXXXX CXXXZXZXZXZXZXZXZX
+            <p>Es un proyecto que comencé a desarrollar, en el instituto <b>SENAC TECH</b>.  
+            Ahora decidí hacer una evolución para aprendeer aún más sobre <b>HTML, CSS y JS.</b>
             </p>
-            <h2>Histórico</h2>
-            <p>IIII NNNNNNN SNSDKDJSKDJKSJ NNNNNNNNNNNNN</p>
+            <h2>Comienzo Del Proyecto:</h2>
+            <p><b>Inicio:</b>01/07/2022</p>
             <div class="imgFake" style="height: 200px;">Imagem 1
             </div>
             <div class="imgFake" style="height: 200px;">Imagem 2
@@ -47,7 +48,7 @@
             </div>
          </div>
          <div class="conteudo">
-            <h2>Conteúdo da Página</h2>
+            <h2>Metas, Finalidad, y Expectativa:</h2>
             <h5>
                <script>
                   date = new Date().toLocaleDateString();
@@ -57,21 +58,33 @@
             <div class="imgFake" style="height:200px">
                Imagem 4
             </div>
-            <p>Kirby Reyes</p>
-            <p>XXX XXXXXX XX XXXXXX XXXXXXXX XXXXXX XXXXXXXXXXXXXX XXXXXXXXX XXXXX XXXXXXX XXXX XXXX XXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXXXXX XXXXXXXXXXXXXXXXX XXXX XXXXXXXXXXXXXXX XXXXXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXXXXXXXXXXX
+            <h2>Metas:</h2>
+            <p>Mayor confianza, para desarrollar diversas páginas con una buena base. 
+               Tengo 1 año y medio con experiencia con el mundo de la <b>Programación</b>
+               Solamente he conseguido elaborar 5 páginas con varios lenguajes, tales como: 
+               <b>HTML, CSS, y JS(React).</b>
             </p>
+
+            <h2>Finalidad:</h2>
+            <p>La verdad, siendo sincera conmigo misma... La finalidade de esto es
+               <b>NO ENLOQUECER DE TANTO CÓDIGO</b> Es mucha información, y no quiero
+               hacer conclusiones precipitadas de que esto (Programar), no sea para mí.
+            </p>
+
+            <h2>Expectativa:</h2>
+            <p>
+               Mi Expectativa es <b>INMENSA!</b>. Haré lo posible para estar presente
+               en esta página, para evoluirla, expandirla y mejorarla.
+            </p>
+            <br/>
+            <h2>Pondré Aquí fotos Randoms de Kirby. No será hoy, ni mañana, ni la semana siguiente. PERO LO HARÉ</h2>
             <picture>
                <source media="(min-width: 600px)" 
-                  srcset="./imagens/imgMedia.jpg" width="600px"/>
+                  srcset="./imagens/cheems.jpg" width="600px"/>
                <source media="(min-width: 465px)" 
-                  srcset="./imagens/imgPequena.jpg"/>
-               <img src="./imagens/caminho.jpg" alt="Caminho entre arvóres" style="max-width: 100%; height: auto;"/>
-            </picture>
-            <br/>
-            <h2>Subtítulo ...</h2>
-            <h5>13/06/2022</h5>
-            <p>Kirby</p>
-            <p>LALA LAKALALLA LALLALALALALALLAA ALALALALLALASLAKSLA LSLASAKSLAKSLAKSL KALSKALSDKALS LLLLLLLLKÇ GJFHAKLJFSLFNIRGJALG ÇA  LOCAFKAP PSKÇKÇFKWEPFROFMG89TRJMG9V4 FNLFRJÇAKSDCÃ\
+                  srcset="./imagens/cheems.jpg"/>
+               <img src="./imagens/cheems.jpg" alt="cheems" style="max-width: 100%; height: auto;"/>
+            </picture>      
          </div>
       </div>
       <div class="footer">
